--- a/ChatApp/ChatApp.Server/ChatApp.Server.csproj
+++ b/ChatApp/ChatApp.Server/ChatApp.Server.csproj
@@ -67,13 +67,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\ChatService.cs" />
+    <Compile Include="Services\LoginService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TokenGenerator.cs" />
+    <Compile Include="Services\MessageRequestService.cs" />
+    <Compile Include="Services\ServerBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ChatApp.Server.laconf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ChatApp.Contracts\ChatApp.Contracts.csproj">
+      <Project>{a3877c1a-4785-4c45-83ff-8ddc96420287}</Project>
+      <Name>ChatApp.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
