--- a/ChatApp/ChatApp.Client/ChatApp.Client.csproj
+++ b/ChatApp/ChatApp.Client/ChatApp.Client.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientProcessors\ClientBase.cs" />
+    <Compile Include="ClientProcessors\Messages.cs" />
     <Compile Include="ClientServices\ChatServiceClient.cs" />
     <Compile Include="ClientProcessors\ClientChatProcessor.cs" />
     <Compile Include="ClientProcessors\ClientInputProcessor.cs" />
