--- a/ChatApp/ChatApp.Contracts/ChatApp.Contracts.csproj
+++ b/ChatApp/ChatApp.Contracts/ChatApp.Contracts.csproj
@@ -64,10 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Message.cs" />
     <Compile Include="Services\IChatService.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IMessageRequestService.cs" />
+    <Compile Include="Services\IRegistrationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
