--- a/ChatApp/ChatApp.Server/ChatApp.Server.csproj
+++ b/ChatApp/ChatApp.Server/ChatApp.Server.csproj
@@ -67,12 +67,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ServerContext.cs" />
     <Compile Include="Services\ChatService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MessageRequestService.cs" />
-    <Compile Include="Services\ServerBase.cs" />
+    <Compile Include="Services\RegistrationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
