--- a/ChatApp/ChatApp.Server/ChatApp.Server.csproj
+++ b/ChatApp/ChatApp.Server/ChatApp.Server.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MessageRequestService.cs" />
     <Compile Include="Services\RegistrationService.cs" />
+    <Compile Include="AuthenticationProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
